[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
packages = ["mycelium"]

[project]
name = "cypher"
authors = [
    {name = "Nathan Maxwell"},
    {name = "Jacob Vantol"}
]
description = "Python client package for sending and recieving messages with the Mycelium message router."
readme = "README.md"
requires-python = ">=3.4"
keywords = ["python", "messaging", "distributed", "mycelium"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.9",
]
dependencies = ['importlib-metadata; python_version<"3.9"']
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/SignalWeave/Mycelium-Python-Client"
Source = "https://github.com/SignalWeave/Mycelium-Python-Client"
